# ollamarama

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.json  docker-compose.yml  help.txt  models.json  ollamarama.py  package.json  pyproject.toml  requirements.txt
ollamarama/: __init__.py  __main__.py  app.py  cli.py  client.py  config.py  fastmcp_client.py  render.py  sessions.py
ollamarama/tools/: math.py  schema.json  text.py  utils.py  web.py
