[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamarama"
version = "1.3.3"

description = "Terminal-based AI chatbot for local LLMs via Ollama"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Dustin Whyte" }]
license = { file = "LICENSE" }
dependencies = [
  "requests",
  "rich",
  "prompt_toolkit",
  "pyperclip",
  "fastmcp"
]

[project.scripts]
ollamarama = "ollamarama.cli:main"

[tool.setuptools.packages.find]
include = ["ollamarama*"]

[tool.setuptools.package-data]
ollamarama = ["tools/*.json"]
